--- a/codelabs-homes-app-start/src/app/app.component.css
+++ b/codelabs-homes-app-start/src/app/app.component.css
@@ -2,6 +2,11 @@
 /* Import a modern font */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 
+@font-face {
+    font-family: 'Montserrat';
+    src: url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);
+}
+
 /* General layout */
 main {
   background-image: url(src\assets\canvaDesign.png);
@@ -10,12 +15,13 @@ main {
   background-repeat: repeat; /* Prevents the image from repeating */
   font-family: 'Montserrat';
   margin: 0;
-  padding: 0;
   background-color: #FF914D;
   color: #333;
   max-width: 97%;
   border-radius: 10px;
-  padding: 2%;
+  padding-left: 8%;
+  padding-right: 8%;
+  padding-top: 2%;
 }
 
 /* Header styling */
@@ -48,46 +54,80 @@ main {
 }
 
 #menu li:hover {
-  color: #69a5d9;
+  color: #ffeeb5;
+}
+
+#menu a {
+  text-decoration: none;
+  color: inherit;
 }
 
 /* Welcome section */
 .welcomeSection {
   text-align: center;
+  display: grid;
+  grid-template-columns: 3;
+  grid-template-rows: 2;
   margin: 40px 0;
   color: rgb(255, 255, 255);
 }
 
 .welcomeSection h1 {
-  font-size: 50px;
+  font-size: 60px;
   margin-bottom: 20px;
+  grid-row: 1;
+  grid-column: span 4;
+}
+
+.welcomeSection img {
+    grid-row: 2;
+    grid-column: 1;
+    max-width: 100%;
+    height: auto;
+}
+
+.imageCrop {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
 }
 
 .welcomeSection p {
   font-size: 18px;
   color: rgb(255, 240, 213);
+  grid-row: 2;
+  grid-column: 2/4;
+  padding-left: 2%;
+  text-align: end;
 }
 
 
 /* Projects section */
   .projectTitle {
-    font-size: 50px;
+    font-size: 45px;
     color: rgb(255, 255, 255);
   }
+
   .projects-container {
+    padding: 2%;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 2%;
     width: 100%;
-    height: fit-content;
-    background-color: rgb(255, 255, 255);
+    height: max-content;
+    background-color: rgb(255, 240, 213, 0.75);
     border-radius: 10px;
   }
   
   .card {
     perspective: 1000px;
-    width: 48%;
-    height: 100%;
+    flex-wrap: wrap;
+    width: 65vh;
+    height: 50vh;
     padding: 2%;
     justify-content: center;
     align-items: center;
@@ -166,10 +206,10 @@ main {
   
   
   .card__description {
-    font-size: 10px;
+    margin: 3%;
+    font-size: 14px;
     color: #777;
-    line-height: 1.4;
-    margin-top: 1vh;
+    line-height: 2;
     text-align: center;
   }
   
@@ -177,7 +217,6 @@ main {
     font-size: small;
     color: #007bff;
     text-decoration: none;
-    display: inline-block;
   }
   
   .card a:hover {
@@ -189,14 +228,50 @@ main {
     text-align: center;
     margin-top: 4vh;
     padding: 2vw;
-    background-color: #fff;
+    background-color: rgb(255, 240, 213, 0.75);
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   .disclaimer h3 {
-    font-size: 1.8vw;
-    color: #666;
+    font-size: 1.5vw;
+    color: #FF914D;
     margin: 1vh 0;
   }
   
+
+  @media screen and (max-width: 500px) {
+    
+    .imageCrop {
+        width: 150px;
+        height: 150px;
+        position: relative;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+
+    .welcomeSection p {
+        font: inherit;
+        font-size: 18px;
+        color: rgb(255, 240, 213);
+        grid-row: 2;
+        grid-column: 2/4;
+        text-align: end;
+        padding-left: 5%;
+      }
+
+      .disclaimer h3 {
+        font-size: 3vw;
+        color: #FF914D;
+        margin: 1vh 0;
+      }
+
+  }
+
+  @media (min-width:501px) and (max-width:800px) {
+    .disclaimer h3 {
+      font-size: 3vw;
+      color: #FF914D;
+      margin: 1vh 0;
+    }
+  }
