--- a/codelabs-homes-app-start/src/app/home/home.component.css
+++ b/codelabs-homes-app-start/src/app/home/home.component.css
@@ -2,11 +2,6 @@
 /* Import a modern font */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 
-@font-face {
-    font-family: 'Montserrat';
-    src: url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);
-}
-
 /* General layout */
 main {
   background-image: url(src\assets\canvaDesign.png);
@@ -17,11 +12,12 @@ main {
   margin: 0;
   background-color: #FF914D;
   color: #333;
-  max-width: 97%;
+  max-width: 100%;
   border-radius: 10px;
   padding-left: 8%;
   padding-right: 8%;
   padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 /* Header styling */
@@ -48,6 +44,7 @@ main {
 
 #menu li {
   margin-left: 20px;
+  right: 0;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
@@ -113,24 +110,26 @@ main {
   }
 
   .projects-container {
-    padding: 2%;
+    padding: 8px;
+    border-radius: 24px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 2%;
     width: 100%;
     height: max-content;
     background-color: rgb(255, 240, 213, 0.75);
-    border-radius: 10px;
   }
   
   .card {
+    border-radius: 16px;
+    padding: 15px;
+    margin: 2%;
     perspective: 1000px;
     flex-wrap: wrap;
-    width: 65vh;
-    height: 50vh;
-    padding: 2%;
+    border: none;
+    width: 68vh;
+    height: 40vh;
     justify-content: center;
     align-items: center;
   }
@@ -195,7 +194,7 @@ main {
   .card img {
     max-width: 100%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 15px;
   }
   
   .card_title {
@@ -206,9 +205,10 @@ main {
     text-align: center;
   }
   
-  
+  .card_date {
+    margin-top: 2%;
+  }
   .card__description {
-    margin: 3%;
     font-size: 14px;
     color: #777;
     line-height: 2;
@@ -228,17 +228,40 @@ main {
   /* Disclaimer section */
   .disclaimer {
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     margin-top: 4vh;
-    padding: 2vw;
+    padding: 5%;
     background-color: rgb(255, 240, 213, 0.75);
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   .disclaimer h3 {
+    font-size: 18px;
+    padding-left: 5%;
     font-size: 1.5vw;
     color: #FF914D;
     margin: 1vh 0;
+  }
+  .disclaimer li {
+    color: #FF914D;
+    font-weight: 500;
+    margin: 1vh 0;
+    list-style: none;
+  }
+  .disclaimer a {
+    text-decoration: none;
+    color: #ff6200;
+  }
+
+  #Contact {
+    padding-right: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-right: 2px solid #fba068;
   }
   
 
@@ -263,16 +286,16 @@ main {
       }
 
       .disclaimer h3 {
-        font-size: 3vw;
+        font-size: 18px;
         color: #FF914D;
         margin: 1vh 0;
       }
 
   }
 
-  @media (min-width:501px) and (max-width:800px) {
+  @media (min-width:501px) and (max-width:1000px) {
     .disclaimer h3 {
-      font-size: 3vw;
+      font-size: 18px;
       color: #FF914D;
       margin: 1vh 0;
     }
