--- a/codelabs-homes-app-start/src/app/home/home.component.css
+++ b/codelabs-homes-app-start/src/app/home/home.component.css
@@ -4,13 +4,12 @@
 
 /* General layout */
 main {
-  background-image: url(src\assets\canvaDesign.png);
-  background-size: cover; /* Ensures the image covers the entire background */
+  background-image: url(src\assets\paintStrokes1.png);
+  background-size:contain;
   background-position: center; /* Centers the image horizontally and vertically */
-  background-repeat: repeat; /* Prevents the image from repeating */
-  font-family: 'Montserrat';
+  font-family: Monospace, 'Montserrat';
   margin: 0;
-  background-color: #FF914D;
+  background-color: #000000;
   color: #333;
   max-width: 100%;
   border-radius: 10px;
@@ -26,8 +25,8 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  border-bottom: 1px solid #eaeaea;
-  color: rgb(255, 240, 213);
+  border-bottom: 1px solid #f0f0f0;
+  color: rgb(255, 255, 255);
 }
 
 #name {
@@ -51,7 +50,7 @@ main {
 }
 
 #menu li:hover {
-  color: #ffeeb5;
+  color: #32cbf1;
 }
 
 #menu a {
@@ -63,7 +62,7 @@ main {
 .welcomeSection {
   text-align: center;
   display: grid;
-  grid-template-columns: 3;
+  grid-template-columns: 40%;
   grid-template-rows: 2;
   margin: 40px 0;
   color: rgb(255, 255, 255);
@@ -74,76 +73,100 @@ main {
   margin-bottom: 20px;
   grid-row: 1;
   grid-column: span 4;
-}
-
-.welcomeSection img {
-    grid-row: 2;
-    grid-column: 1;
-    max-width: 100%;
-    height: auto;
-}
-
-.imageCrop {
-    width: 200px;
-    height: 200px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50%;
+  font-weight: 700;
 }
 
 .welcomeSection p {
   font: inherit;
   font-family: inherit;
   font-size: 18px;
-  color: rgb(255, 240, 213);
+  font-weight: 400;
   grid-row: 2;
-  grid-column: 2/4;
+  grid-column: span 4;
+  text-align: middle;
+  padding: 1%;
   padding-left: 2%;
-  text-align: end;
+  padding-right: 2%;
+  padding-bottom: 5%;
+  text-align: left;
+  font-family: monospace;
+  color: #353535;
+  background-color: rgb(255, 255, 255, .8);
+  border:solid #353535 2px;
+  border-radius: 10px;
+}
+
+.welcomeSection p::after {
+  content: "";
+  width: 10px;
+  height: 25px;
+  background: #353535;
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
 }
 
 
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+}
+
 /* Projects section */
+  .projectsHeader {
+    display: flex;
+    flex-direction: row;
+  }
+
   .projectTitle {
     font-size: 45px;
     color: rgb(255, 255, 255);
+    font-weight: 600;
+  }
+  #languages{
+    width: 25em;
+    height: 30%;
+    padding-left: 2%;
   }
 
+
   .projects-container {
-    padding: 8px;
-    border-radius: 24px;
+    border:solid #353535 2px;
+
+    padding: 2%;
+    border-radius: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     height: max-content;
-    background-color: rgb(255, 240, 213, 0.75);
+    background-color: rgb(255, 255, 255, 0.75);
   }
   
   .card {
+    padding: 2%;
+    background-color: #ffffff;
     border-radius: 16px;
-    padding: 15px;
-    margin: 2%;
-    perspective: 1000px;
-    flex-wrap: wrap;
     border: none;
-    width: 68vh;
-    height: 40vh;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .card_inner {
-    position: relative;
+    margin-bottom: 2%;
     width: 100%;
     height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 0.6s;
+    justify-content: center;
+    align-items: center;
+    display: flex;
   }
   
-  .card_inner > .card_front {
-    position: relative;
+  .card_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 2%;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .card_content > .card_image {
     top: 0;
     left: 0;
     right: 0;
@@ -155,40 +178,35 @@ main {
     border-radius: 10px;
     overflow:visible;
   }
-  .card_inner > .card_back {
-    position: absolute;
+  .card_content > .card_info {
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: center;
     border-radius: 10px;
     overflow:visible;
   }
   
-  .card:hover .card_inner {
-    transform: rotateY(180deg);
-  }
   
-  .card_front, .card_back {
-    backface-visibility: hidden;
+  .card_image, .card_info {
     width: 100%;
     height: 100%;
   }
   
-  .card_front {
+  .card_image {
     background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
   }
   
-  .card_back {
-    background-color: #fff;
-    transform: rotateY(180deg);
+  .card_info {
+    background-color: #ffffff;
+    align-items: left;
   }
   
   .card img {
@@ -202,101 +220,159 @@ main {
     color: #333;
     font-weight: 700;
     margin: 0;
-    text-align: center;
+    text-align: left;
   }
   
   .card_date {
-    margin-top: 2%;
+    margin-top: 3%;
   }
   .card__description {
     font-size: 14px;
     color: #777;
     line-height: 2;
-    text-align: center;
+    text-align: left;
   }
   
   .card a {
-    font-size: small;
-    color: #007bff;
+    font-size: 14px;
+    color: #32cbf1;
     text-decoration: none;
+    grid-column: 1/3;
+    font-weight: 600;
   }
   
   .card a:hover {
     text-decoration: underline;
   }
+
+  .bottomPanel {
+    display: grid;
+    grid-template-columns: 55% auto;
+    grid-template-rows: 2;
+  }
+
+  .skillImg {
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2%;
+    justify-content: right;
+  }
+
+  .skillImg img {
+    width: 50px;
+    height: 50px;
+    flex: 0 1 calc(33.333% - 32px);
+    box-sizing: border-box;
+  }
+
+  .links {
+    grid-column: 1/3;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+  }
   
   /* Disclaimer section */
   .disclaimer {
-    text-align: center;
+    /* text-align: center;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 4vh;
     padding: 5%;
-    background-color: rgb(255, 240, 213, 0.75);
+    background-color: rgba(255, 255, 255, 0.75);
+    border: none;
+    border-radius: 10px; */
+
+    margin-top: 2%;
+    font: inherit;
+    font-family: inherit;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    text-align: left;
+    font-family: monospace;
+    color: #353535;
+    background-color: rgb(255, 255, 255, .8);
+    border:solid #353535 2px;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   .disclaimer h3 {
     font-size: 18px;
-    padding-left: 5%;
-    font-size: 1.5vw;
-    color: #FF914D;
-    margin: 1vh 0;
+    /*padding-left: 5%;*/
+    color: #353535;
   }
   .disclaimer li {
-    color: #FF914D;
+    color: #353535;
     font-weight: 500;
-    margin: 1vh 0;
     list-style: none;
   }
   .disclaimer a {
     text-decoration: none;
-    color: #ff6200;
+    color: #32cbf1;
   }
 
   #Contact {
-    padding-right: 10%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-right: 2px solid #fba068;
+    /*padding-right: 10%;
+    border-right: 2px solid #32cbf1;*/
+    text-align: left;
   }
   
 
   @media screen and (max-width: 500px) {
-    
-    .imageCrop {
-        width: 150px;
-        height: 150px;
-        position: relative;
-        overflow: hidden;
-        border-radius: 50%;
-    }
-
-    .welcomeSection p {
-        font: inherit;
-        font-size: 18px;
-        color: rgb(255, 240, 213);
-        grid-row: 2;
-        grid-column: 2/4;
-        text-align: end;
-        padding-left: 5%;
-      }
 
       .disclaimer h3 {
         font-size: 18px;
-        color: #FF914D;
-        margin: 1vh 0;
       }
-
+      #menu ul {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+      }
+      .card_content {
+        display: grid;
+        grid-template-columns: 1;
+        grid-template-rows: 2;
+        gap: 2%;
+        width: 100%;
+        height: 100%;
+      }
+      .card_content > .card_image {
+        grid-row: 1/2;
+      }
+      .card_content > .card_info {
+        grid-row: 2/2;
+      }
+      .card {
+        padding: 5%;
+      }
   }
 
-  @media (min-width:501px) and (max-width:1000px) {
+  @media (min-width:501px) and (max-width:980px) {
     .disclaimer h3 {
       font-size: 18px;
-      color: #FF914D;
-      margin: 1vh 0;
     }
+    .card_content {
+      display: grid;
+      grid-template-columns: 1;
+      grid-template-rows: 2;
+      gap: 2%;
+      width: 100%;
+      height: 100%;
+    }
+    .card_content > .card_image {
+      grid-row: 1/2;
+    }
+    .card_content > .card_info {
+      grid-row: 2/2;
+    }
+    .card {
+      padding: 5%;
+    }
+
   }
