--- a/codelabs-homes-app-start/src/app/home/home.component.css
+++ b/codelabs-homes-app-start/src/app/home/home.component.css
@@ -69,7 +69,7 @@ main {
 }
 
 .welcomeSection h1 {
-  font-size: 60px;
+  font-size: 80px;
   margin-bottom: 20px;
   grid-row: 1;
   grid-column: span 4;
@@ -91,7 +91,7 @@ main {
   text-align: left;
   font-family: monospace;
   color: #353535;
-  background-color: rgb(255, 255, 255, .8);
+  background-color: rgb(255, 255, 255);
   border:solid #353535 2px;
   border-radius: 10px;
 }
@@ -119,7 +119,7 @@ main {
   }
 
   .projectTitle {
-    font-size: 45px;
+    font-size: 60px;
     color: rgb(255, 255, 255);
     font-weight: 600;
   }
@@ -189,6 +189,8 @@ main {
     justify-content: center;
     border-radius: 10px;
     overflow:visible;
+    padding: 0;
+    margin: 0;
   }
   
   
@@ -224,13 +226,15 @@ main {
   }
   
   .card_date {
-    margin-top: 3%;
+    font-size: 14px;
+    color: #777;
+    margin-top: 1%;
   }
   .card__description {
     font-size: 14px;
-    color: #777;
-    line-height: 2;
     text-align: left;
+    white-space: pre-wrap;
+    line-height: 15px;
   }
   
   .card a {
