--- a/codelabs-homes-app-start/src/app/home/home.component.css
+++ b/codelabs-homes-app-start/src/app/home/home.component.css
@@ -4,8 +4,8 @@
 
 /* General layout */
 main {
-  background-image: url(src\assets\paintStrokes1.png);
-  background-size:contain;
+  background-image: url(src/assets/motherboardBackgroundV2.jpg);  
+  background-size:cover;
   background-position: center; /* Centers the image horizontally and vertically */
   font-family: Monospace, 'Montserrat';
   margin: 0;
@@ -62,27 +62,30 @@ main {
 .welcomeSection {
   text-align: center;
   display: grid;
-  grid-template-columns: 40%;
+  grid-template-columns: 40% 60%;
   grid-template-rows: 2;
   margin: 40px 0;
   color: rgb(255, 255, 255);
+  padding-bottom: 3%;
 }
 
 .welcomeSection h1 {
-  font-size: 80px;
-  margin-bottom: 20px;
+  font-size: 60px;
   grid-row: 1;
-  grid-column: span 4;
+  grid-column: 1/3;
   font-weight: 700;
+  max-width: 50%;
+  text-align: left;
 }
 
 .welcomeSection p {
+  
   font: inherit;
   font-family: inherit;
   font-size: 18px;
   font-weight: 400;
   grid-row: 2;
-  grid-column: span 4;
+  grid-column: 1/3;
   text-align: middle;
   padding: 1%;
   padding-left: 2%;
@@ -90,9 +93,9 @@ main {
   padding-bottom: 5%;
   text-align: left;
   font-family: monospace;
-  color: #353535;
-  background-color: rgb(255, 255, 255);
-  border:solid #353535 2px;
+  color: #eaeaea;
+  background-color: rgb(0, 0, 0, .8);
+  border:solid #ffffff 2px;
   border-radius: 10px;
 }
 
@@ -100,7 +103,7 @@ main {
   content: "";
   width: 10px;
   height: 25px;
-  background: #353535;
+  background: #d3d3d3;
   display: inline-block;
   animation: cursor-blink 1.5s steps(2) infinite;
 }
@@ -131,8 +134,7 @@ main {
 
 
   .projects-container {
-    border:solid #353535 2px;
-
+    border:solid #ffffff 2px;
     padding: 2%;
     border-radius: 10px;
     display: flex;
@@ -141,12 +143,12 @@ main {
     justify-content: center;
     width: 100%;
     height: max-content;
-    background-color: rgb(255, 255, 255, 0.75);
+    background-color: rgba(0, 0, 0, 0.75);
   }
   
   .card {
     padding: 2%;
-    background-color: #ffffff;
+    background-color: #000000;
     border-radius: 16px;
     border: none;
     margin-bottom: 2%;
@@ -191,6 +193,7 @@ main {
     overflow:visible;
     padding: 0;
     margin: 0;
+    background-color: #000000;
   }
   
   
@@ -200,7 +203,7 @@ main {
   }
   
   .card_image {
-    background-color: #ffffff;
+    background-color: #000000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,29 +221,33 @@ main {
   }
   
   .card_title {
-    font-size: 20px;
-    color: #333;
+    font-size: 25px;
+    color: #ffffff;
     font-weight: 700;
     margin: 0;
     text-align: left;
   }
   
   .card_date {
-    font-size: 14px;
-    color: #777;
+    font-size: 18px;
+    color: #c1c1c1;
     margin-top: 1%;
   }
   .card__description {
-    font-size: 14px;
+    font-size: 20px;
     text-align: left;
-    white-space: pre-wrap;
-    line-height: 15px;
+   
+    color: #eaeaea;
+  }
+
+  .highlight {
+    color:#32cbf1;
+    text-align: left;
   }
   
   .card a {
-    font-size: 14px;
+    font-size: 18px;
     color: #32cbf1;
-    text-decoration: none;
     grid-column: 1/3;
     font-weight: 600;
   }
@@ -300,19 +307,19 @@ main {
     padding-right: 2%;
     text-align: left;
     font-family: monospace;
-    color: #353535;
-    background-color: rgb(255, 255, 255, .8);
-    border:solid #353535 2px;
+    color: #eaeaea;
+    background-color: rgba(0, 0, 0, 0.8);
+    border:solid #ffffff 2px;
     border-radius: 10px;
   }
   
   .disclaimer h3 {
     font-size: 18px;
     /*padding-left: 5%;*/
-    color: #353535;
+    color: #eaeaea;
   }
   .disclaimer li {
-    color: #353535;
+    color: #eaeaea;
     font-weight: 500;
     list-style: none;
   }
