Welcome! > Hello World!, un-capitalized headings idk if i like it

--- a/codelabs-homes-app-start/src/app/home/home.component.html
+++ b/codelabs-homes-app-start/src/app/home/home.component.html
@@ -21,7 +21,7 @@
           </div>
         </section>
         <section class="welcomeSection">
-          <h1>WELCOME!</h1>  
+          <h1>Hello World!</h1>  
           <p class="commandBox">
             <span style="color:#32cbf1"> $ Welcome to my portfolio! </span><br> 
             <span style="color:#32cbf1"> $ </span> I'm <span style="color:#32cbf1">[Irene]</span>, a passionate computer science student specializing in <span style="color:#32cbf1">[Software Engineering]</span>.
@@ -32,7 +32,7 @@
         </section>
 
         <section class="projectsHeader">
-          <h1 class="projectTitle"> PROJECTS </h1>
+          <h1 class="projectTitle"> Projects </h1>
         </section>
         <section class="projects-container">
           <div *ngFor="let project of projectsTemplateList" class="card">
@@ -61,7 +61,7 @@
           </div>
         </section>
 
-        <h1 class="ContactTitle"> CONTACT INFO</h1>
+        <h1 class="ContactTitle">Contact Info</h1>
         <section class="disclaimer"> 
           <div id="Contact">
             <ul>
