--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -66,7 +66,7 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap; /* Allow menu items to wrap */
-  justify-content: flex-end;
+  justify-content: end;
 }
 
 #menu li {
