--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -66,7 +66,7 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap; /* Allow menu items to wrap */
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 #menu li {
@@ -433,7 +433,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      text-align: end;
+      text-align: flex-end;
     }
     #name {
       white-space: wrap;
