Trying to deploy the website
added Firebase:
ng add @angular/fire
ng deploy

--- a/ihgPortfolio/src/app/app.component.html
+++ b/ihgPortfolio/src/app/app.component.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <router-outlet></router-outlet>
     <main>
         App Page
     </main>
-
-      
 </body>
 </html>
