--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -1,54 +1,86 @@
-main {
-    background-image: url(src\assets\paintStrokes2.png);
-    background-size:cover; /*change to contain at some point*/
-    background-position: center; /* Centers the image horizontally and vertically */
-    font-family: Monospace, 'Montserrat';
-    margin: 0;
-    background-color: #000000;
-    color: #333;
-    max-width: 100%;
-    border-radius: 10px;
-    padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-  }
-  
-  /* Header styling */
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-    border-bottom: 1px solid #f0f0f0;
-    color: rgb(255, 255, 255);
-  }
-  
-  #name {
-    font-size: 24px;
-    font-weight: 700;
-  }
-  
-  #menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  #menu li {
-    margin-left: 20px;
-    right: 0;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  
-  #menu li:hover {
-    color: #32cbf1;
-  }
-  
-  #menu a {
-    text-decoration: none;
-    color: inherit;
-  }
+/* General layout */
+
+#background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('src/assets/motherboardBackgroundBlurMid.jpg'); /* Update this path to your background image */
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+
+.main {
+  position: relative;
+  z-index: 3;
+  font-family: monospace;
+  margin: 0;
+  background-color: #000000;
+  color: #333;
+  max-width: 100%;
+  border-radius: 10px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  padding-left: 10%;
+  padding-right: 10%;
+  border-bottom: 1px solid #f0f0f0;
+  color: rgb(255, 255, 255);
+  font-family: monospace;
+  background-color: rgb(0, 0, 0, .8);
+  position: fixed;
+  z-index: 4;
+  width: 100%;
+}
+
+#name {
+  font-size: 24px;
+  font-weight: 700;
+  white-space: nowrap; /* Ensure name stays in one line */
+}
+
+#menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap; /* Allow menu items to wrap */
+  justify-content: flex-end;
+}
+
+#menu li {
+  margin-left: 20px;
+  right: 0;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+#menu a:hover {
+  color: #32cbf1;
+}
+
+#menu a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
