Working on About section

--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -20,6 +20,15 @@
                 </ul>
               </div>
         </section>
+
+        <section class="welcomeSection">
+          <h1>About Me</h1>
+          <p class="commandBox">
+            <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span>            
+          </p>
+        </section>
+
       </main>
+      <div id="particles-js"></div>
 </body>
 </html>
