--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -105,9 +105,8 @@
 .welcomeSection h1 {
   font-size: 60px;
   grid-row: 1;
-  grid-column: 1/3;
+  grid-column: span 3;
   font-weight: 700;
-  max-width: 50%;
   text-align: left;
 }
 
