--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -24,8 +24,27 @@
         <section class="welcomeSection">
           <h1>About Me</h1>
           <p class="commandBox">
-            <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span>            
+            <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span> <br>
+            <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[ <a href="#artSection"> artist</a></span>,
+            <span style="color:#32cbf1"> reader</span>, <span style="color:#32cbf1"> photographer</span>,
+            <span style="color:#32cbf1"> writer</span>, <span style="color:#32cbf1"> baker</span>,
+             <span style="color:#32cbf1"> basketball player</span>,<span style="color:#32cbf1"> coffee lover ]</span><br>
+            <span style="color:#32cbf1"> $ </span> My bucket list includes <span style="color:#32cbf1">[ travel</span>,
+            <span style="color:#32cbf1">skydiving</span>, <span style="color:#32cbf1">hiking</span>, 
+            <span style="color:#32cbf1">living by the water ]</span> and more <br>
+            <span style="color:#32cbf1"> $ </span> I hope to continue finding new hobbies and checking off my bucket list all while
+            fulfilling my passion for Computer Science <br>
+            <span style="color:#32cbf1"> $ </span> 
           </p>
+          <img src="/assets/mephoto.jpg" alt="Photo of me">
+        </section>
+
+        <h1 class="hobbiesTitle">Hobbies</h1>
+        <section class="hobbies">
+            <div id="artSection">
+                <h2>Art</h2>
+            </div>
+
         </section>
 
       </main>
