About Me section updated

--- a/ihgPortfolio/src/app/home/home.component.html
+++ b/ihgPortfolio/src/app/home/home.component.html
@@ -23,11 +23,11 @@
         <section class="welcomeSection">
           <h1>Hello World!</h1>
           <p class="commandBox">
-            <span style="color:#32cbf1"> $ Welcome to my portfolio! </span><br> 
+            <br> <span style="color:#32cbf1"> $ Welcome to my portfolio! </span><br> <br> 
             <span style="color:#32cbf1"> $ </span> I'm <span style="color:#32cbf1">[Irene]</span>, a passionate computer science student specializing in <span style="color:#32cbf1">[Software Engineering]</span>.
-            <br> <span style="color:#32cbf1"> $ </span> Here, you'll find a showcase of my <span style="color:#32cbf1">["projects", "skills", and "experiences"]</span> that highlight my journey in the tech world.
-            <br> <span style="color:#32cbf1"> $ </span> Let's connect and see how we can build the future together!
-            <br> <span style="color:#32cbf1"> $ </span> 
+            <br><br>  <span style="color:#32cbf1"> $ </span> Here, you'll find a showcase of my <span style="color:#32cbf1">["projects", "skills", and "experiences"]</span> that highlight my journey in the tech world.
+            <br><br>  <span style="color:#32cbf1"> $ </span> Let's connect and see how we can build the future together!
+            <br><br>  <span style="color:#32cbf1"> $ </span> 
           </p>
         </section>
 
