--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -2,21 +2,69 @@ body {
     font-family: monospace;
 }
 
-.welcomeSection p {
-    max-width: 50%;
-    grid-column: 1/3;
+.aboutMeSection {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    position: relative;
+    z-index: 3;
 }
-.welcomeSection img {
-    width: 50%;
-    grid-column: 2/3;
-    grid-row: 2;
+
+.aboutMeSection h1 {
+    margin-top: 150px;
+    width: 100%;
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    text-align: left;
+}
+
+.aboutContent {
+    background-color: rgb(0,0,0, .8);
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    border:solid #dddddd 2px;
     border-radius: 10px;
+    overflow: hidden;
 }
+
+.aboutContent p {
+    font-size: 20px;
+    width: 60%;
+    border: none;
+    background: none;
+
+}
+.aboutContent img {
+    width: 40%; /* Make the image cover 40% of the container's width */
+    height: auto; /* Maintain the aspect ratio */
+    object-fit: cover; /* Ensure the image covers the assigned space */
+    object-position: center; /* Center the image */
+}
+
 
 .commandBox a {
     text-decoration: underline;
     color: inherit;
 }
+
+@media (max-width: 1000px) {
+    .aboutContent {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .aboutContent img {
+        width: 100%;
+    }
+    .aboutContent p {
+        width: 100%;
+    }
+}
+
 
 .hobbiesTitle {
     color: white;
@@ -36,6 +84,6 @@ body {
     padding-right: 10%;
     color: white;
     background-color: black;
-    position: fixed;
+    position: relative;
     z-index: 3;
 }
