--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -48,7 +48,7 @@
   border-bottom: 1px solid #f0f0f0;
   color: rgb(255, 255, 255);
   font-family: monospace;
-  background-color: rgb(0, 0, 0, .8);
+  background-color: rgb(0, 0, 0);
   position: fixed;
   z-index: 4;
   width: 100%;
@@ -98,6 +98,7 @@
   padding-top: 150px;
   padding-bottom: 5%;
   color: rgb(255, 255, 255);
+
   position: relative;
   z-index: 3; /* Set z-index to ensure it's above the particles */
 }
@@ -128,6 +129,8 @@
   background-color: rgb(0, 0, 0, .8);
   border:solid #dddddd 2px;
   border-radius: 10px;
+  font-size: 20px;
+
 }
 
 
