new home page look

--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -26,7 +26,7 @@
           <div class="aboutContent">
             <p class="commandBox">
                 <br> <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span> <br><br>
-                <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[ <a href="#artSection"> artist</a></span>,
+                <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[ <!-- <a href="#artSection"> --> artist<!--</a> --></span>,
                 <span style="color:#32cbf1"> reader</span>, <span style="color:#32cbf1"> photographer</span>,
                 <span style="color:#32cbf1"> baker</span>,
                 <span style="color:#32cbf1"> basketball player</span>,<span style="color:#32cbf1"> coffee lover ]</span><br><br>
@@ -41,6 +41,7 @@
           </div>
         </section>
 
+        <!-- 
         <h1 class="hobbiesTitle">Hobbies</h1>
         <section class="hobbies">
             <div id="artSection">
@@ -48,6 +49,7 @@
             </div>
 
         </section>
+        -->
 
       </main>
       <div id="particles-js"></div>
