--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -43,12 +43,13 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  padding-left: 10%;
-  padding-right: 10%;
-  border-bottom: 1px solid #f0f0f0;
+  padding-left: 5%;
+  padding-right: 5%;
+  /*border-bottom: 1px solid #f0f0f0;*/
   color: rgb(255, 255, 255);
   font-family: monospace;
   background-color: rgb(0, 0, 0);
+  
   position: fixed;
   z-index: 4;
   width: 100%;
@@ -96,9 +97,10 @@
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 150px;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
   color: rgb(255, 255, 255);
-
+  background-color: rgb(0, 0, 0);
+  height: 100vh;
   position: relative;
   z-index: 3; /* Set z-index to ensure it's above the particles */
 }
