--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -29,7 +29,7 @@
   font-family: monospace;
   margin: 0;
   background-color: #000000;
-  color: #333;
+  color: #ffffff;
   max-width: 100%;
   border-radius: 10px;
   padding-left: 10%;
@@ -48,7 +48,7 @@
   /*border-bottom: 1px solid #f0f0f0;*/
   color: rgb(255, 255, 255);
   font-family: monospace;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, .8);
   
   position: fixed;
   z-index: 4;
@@ -406,7 +406,7 @@
       #menu ul {
         display: flex;
         flex-direction: column;
-        text-align: right;
+        text-align: end;
       }
 
       .welcomeSection {
@@ -443,7 +443,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      text-align: flex-end;
+      text-align: end;
     }
     #name {
       white-space: wrap;
