attempt to make black background cover command line in smaller screens

--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -89,6 +89,8 @@
 
 /* Welcome section */
 .welcomeSection {
+  min-height: fit-content;
+  min-height: -moz-fit-content;
   font-family: monospace;
   text-align: center;
   display: grid;  
