--- a/ihgPortfolio/src/app/home/home.component.html
+++ b/ihgPortfolio/src/app/home/home.component.html
@@ -31,6 +31,8 @@
           </p>
         </section>
 
+      <app-floating-menu></app-floating-menu>
+        
         <section class="projectsHeader">
           <h1 class="projectTitle"> Projects </h1>
         </section>
