--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -190,6 +190,7 @@
     z-index: 3; /* Set z-index to ensure it's above the particles */
     position: relative; /* Ensure z-index is applied properly */    margin-left: 10%;
     padding: 2%;
+    margin-bottom: 2%;
   }
   
   .card {
@@ -331,18 +332,9 @@
     display: flex;
     flex-direction: column;
   }
-  
-  /* Disclaimer section */
+  /*
+  // Disclaimer section
   .disclaimer {
-    /* text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: 4vh;
-    padding: 5%;
-    background-color: rgba(255, 255, 255, 0.75);
-    border: none;
-    border-radius: 10px; */
 
     margin-top: 2%;
     font: inherit;
@@ -386,8 +378,8 @@
 
   .disclaimer ul {
     list-style-type: none;
-    padding-left: 0; /* Removes left padding */
-    margin-left: 0; /* Removes left margin */
+    padding-left: 0;
+    margin-left: 0;
   }
   .disclaimer li {
     color: #eaeaea;
@@ -398,13 +390,13 @@
     color: #32cbf1;
     text-decoration: none;
   }
-  
+  */
 
   @media screen and (max-width: 500px) {
 
-      .disclaimer h3 {
+      /* .disclaimer h3 {
         font-size: 18px;
-      }
+      } */
       #menu ul {
         display: flex;
         flex-direction: column;
@@ -454,9 +446,9 @@
   }
 
   @media (min-width:501px) and (max-width:1250px) {
-    .disclaimer h3 {
+    /* .disclaimer h3 {
       font-size: 18px;
-    }
+    } */
     .card_content {
       display: grid;
       grid-template-columns: 1;
