--- a/ihgPortfolio/src/app/floating-menu/floating-menu.component.css
+++ b/ihgPortfolio/src/app/floating-menu/floating-menu.component.css
@@ -11,6 +11,14 @@
   z-index: 4;
 }
 
+@media screen and (max-width: 700px) {
+ 
+  .floating-menu {
+    right: 1px;
+  }
+}
+
+
 .floating-menu img {
   max-width: 30px;
   max-height: 30px;
