--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -26,13 +26,9 @@
           <div class="aboutContent">
             <p class="commandBox">
                 <br> <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span> <br><br>
-                <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[ <!-- <a href="#artSection"> --> artist<!--</a> --></span>,
-                <span style="color:#32cbf1"> reader</span>, <span style="color:#32cbf1"> photographer</span>,
-                <span style="color:#32cbf1"> baker</span>,
-                <span style="color:#32cbf1"> basketball player</span>,<span style="color:#32cbf1"> coffee lover ]</span><br><br>
-                <span style="color:#32cbf1"> $ </span> My bucket list includes <span style="color:#32cbf1">[ travel</span>,
-                <span style="color:#32cbf1">skydiving</span>, <span style="color:#32cbf1">hiking</span>, 
-                <span style="color:#32cbf1">living by the water ]</span> and more <br><br>
+                <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[<!-- <a href="#artSection"> -->artist<!--</a> -->, reader,
+                photographer, baker, basketball player, coffee lover]</span><br><br>
+                <span style="color:#32cbf1"> $ </span> My bucket list includes <span style="color:#32cbf1">[travel, skydiving, hiking, living by the water]</span> and more <br><br>
                 <span style="color:#32cbf1"> $ </span> I hope to continue finding new hobbies and checking off my bucket list all while
                 fulfilling my passion for Computer Science <br><br>
                 <span style="color:#32cbf1"> $ </span> 
