attempting to add text input in command line

--- a/ihgPortfolio/src/app/home/home.component.html
+++ b/ihgPortfolio/src/app/home/home.component.html
@@ -27,7 +27,7 @@
             <span style="color:#32cbf1"> $ </span> I'm <span style="color:#32cbf1">[Irene]</span>, a passionate computer science student specializing in <span style="color:#32cbf1">[Software Engineering]</span>.
             <br><br>  <span style="color:#32cbf1"> $ </span> Here, you'll find a showcase of my <span style="color:#32cbf1">[projects, skills, and experiences]</span> that highlight my journey in the tech world.
             <br><br>  <span style="color:#32cbf1"> $ </span> Feel free to look around and connect with me!
-            <br><br>  <span style="color:#32cbf1"> $ </span> 
+            <br><br>  <span style="color:#32cbf1"> $ </span> <!--<span id="userInputContainer"><input type="text" id="userInput" placeholder="Type your command here..." (keydown.enter)="handleInput($event)"></span>-->
           </p>
         </section>
 
