added responsive commands in command line

--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -2,6 +2,43 @@ body {
     font-family: monospace;
 }
 
+.commandBox2 {
+    font: inherit;
+    font-family: inherit;
+    font-size: 18px;
+    font-weight: 400;
+    grid-row: 2;
+    grid-column: span 3;
+    text-align: middle;
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 5%;
+    text-align: left;
+    font-family: monospace;
+    color: #eaeaea;
+    background-color: rgb(0, 0, 0, .8);
+    border:solid #dddddd 2px;
+    border-radius: 10px;
+    font-size: 20px;
+  
+}
+
+.commandBox2::after {
+    content: "";
+    width: 10px;
+    height: 25px;
+    background: #d3d3d3;
+    display: inline-block;
+    animation: cursor-blink 1.5s steps(2) infinite;
+  }
+
+  @keyframes cursor-blink {
+    0% {
+      opacity: 0;
+    }
+  }
+
 .aboutMeSection {
     display: flex;
     flex-direction: column;
