--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -24,7 +24,7 @@
         <section class="aboutMeSection">
           <h1>About Me</h1>
           <div class="aboutContent">
-            <p class="commandBox">
+            <p class="commandBox2">
                 <br> <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span> <br><br>
                 <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[<!-- <a href="#artSection"> -->artist<!--</a> -->, reader,
                 photographer, baker, basketball player, coffee lover]</span><br><br>
