--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -3,13 +3,6 @@ body {
 }
 
 .commandBox2 {
-    font: inherit;
-    font-family: inherit;
-    font-size: 18px;
-    font-weight: 400;
-    grid-row: 2;
-    grid-column: span 3;
-    text-align: middle;
     padding: 1%;
     padding-left: 2%;
     padding-right: 2%;
@@ -17,14 +10,13 @@ body {
     text-align: left;
     font-family: monospace;
     color: #eaeaea;
-    background-color: rgb(0, 0, 0, .8);
-    border:solid #dddddd 2px;
     border-radius: 10px;
     font-size: 20px;
-  
+    font-weight: 400;
 }
 
-.commandBox2::after {
+
+#userInputContainer::after {
     content: "";
     width: 10px;
     height: 25px;
@@ -32,12 +24,18 @@ body {
     display: inline-block;
     animation: cursor-blink 1.5s steps(2) infinite;
   }
+  #userInputContainer:focus-within::after {
+    display: none;
+  }
 
   @keyframes cursor-blink {
     0% {
       opacity: 0;
     }
   }
+
+
+
 
 .aboutMeSection {
     display: flex;
@@ -70,7 +68,7 @@ body {
 
 .aboutContent p {
     font-size: 20px;
-    width: 60%;
+    width: 100%;
     border: none;
     background: none;
 
