--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -24,15 +24,19 @@
         <section class="aboutMeSection">
           <h1>About Me</h1>
           <div class="aboutContent">
-            <p class="commandBox2">
+            <div class="commandBox2">
+              <p>
                 <br> <span style="color:#32cbf1"> $ Who am I beyond Computer Science? </span> <br><br>
                 <span style="color:#32cbf1"> $ </span> I've been an <span style="color:#32cbf1">[<!-- <a href="#artSection"> -->artist<!--</a> -->, reader,
                 photographer, baker, basketball player, coffee lover]</span><br><br>
                 <span style="color:#32cbf1"> $ </span> My bucket list includes <span style="color:#32cbf1">[travel, skydiving, hiking, living by the water]</span> and more <br><br>
                 <span style="color:#32cbf1"> $ </span> I hope to continue finding new hobbies and checking off my bucket list all while
-                fulfilling my passion for Computer Science <br><br>
-                <span style="color:#32cbf1"> $ </span> 
-            </p>
+                fulfilling my passion for Computer Science <br>
+              </p>
+              <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
+                <span id="userInputContainer"><span style="color:#32cbf1"> $ </span><input type="text" id="userInput" name="section" placeholder="Type your command here..." ngModel required></span>
+              </form> 
+            </div>
             <img src="/assets/fullwidthAboutMePhoto.jpg" alt="Photo of author">
           </div>
         </section>
