--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -41,6 +41,13 @@
           </div>
         </section>
 
+        <section class="aboutMeSection">
+          <h1>Education</h1>
+          <div class="educationContent">
+            
+          </div>
+        </section>
+
         <!-- 
         <h1 class="hobbiesTitle">Hobbies</h1>
         <section class="hobbies">
