--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -94,8 +94,8 @@
 
 /* Welcome section */
 .welcomeSection {
-  min-height: fit-content;
   min-height: -moz-fit-content;
+  min-height: fit-content;
   font-family: monospace;
   display: flex;
   flex-direction: column;
@@ -103,7 +103,7 @@
   gap: 2%;
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 150px;
+  padding-top: 20vh;
   padding-bottom: 10%;
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
