added education section

--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -43,7 +43,19 @@
 
         <section class="aboutMeSection">
           <h1>Education</h1>
-          <div class="educationContent">
+          <div #educationContent class="educationContent">
+            <img src="../assets/purdueLogo.png" alt="Purdue University Logo">
+            <p>
+              I currently attend <span style="color:#32cbf1"> Purdue University </span> where I'm pursuing a <span style="color:#32cbf1">Bachelor's degree in Computer Science</span> and 
+              a <span style="color:#32cbf1">Minor in Philosophy</span>.
+              I've taken courses such as...<br> <span style="color:#32cbf1"> $ </span> Problem Solving Object-Oriented Programming <span style="color:#32cbf1">(Java)</span><br>
+              <span style="color:#32cbf1"> $ </span> Programming in <span style="color:#32cbf1">C</span><br>
+              <span style="color:#32cbf1"> $ </span>  Foundations of Computer Science <span style="color:#32cbf1">(Discrete Math)</span><br>
+              <span style="color:#32cbf1"> $ </span>Data Structures and Algorithms <span style="color:#32cbf1">(C++)</span><br>
+              <span style="color:#32cbf1"> $ </span>Computer Architecture<br> 
+              I'll be taking more to work towards completion of the <span style="color:#32cbf1">Software Engineering</span> and 
+              <span style="color:#32cbf1">Programming Languages</span> tracks that my school offers!
+            </p>
             
           </div>
         </section>
