--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -1,5 +1,8 @@
 body {
     font-family: monospace;
+    color: #eaeaea;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .commandBox2 {
@@ -99,6 +102,30 @@ body {
         width: 100%;
     }
 }
+
+
+.educationContent {
+    background-color: rgb(0,0,0, .8);
+    display: flex;
+    flex-direction: row;
+    gap: 10%;
+    align-items: center;
+    border:solid #dddddd 2px;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 2%;
+    margin-bottom: 10%;
+    text-align: left;
+    line-height: 2;
+}
+
+.educationContent img {
+    max-width: 300px;
+    max-height: 300px;
+    padding-left: 5%;
+}
+
+
 
 
 .hobbiesTitle {
