--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -61,6 +61,7 @@
         </section>
 
         <!-- 
+        <section class="aboutMeSection">
         <h1 class="hobbiesTitle">Hobbies</h1>
         <section class="hobbies">
             <div id="artSection">
@@ -68,6 +69,7 @@
             </div>
 
         </section>
+      </section>
         -->
 
       </main>
