--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -60,7 +60,7 @@ body {
 }
 
 .aboutContent {
-    background-color: rgb(0,0,0, .8);
+    background-color: rgb(0,0,0);
     display: flex;
     flex-direction: row;
     gap: 2%;
@@ -123,29 +123,4 @@ body {
     max-width: 300px;
     max-height: 300px;
     padding-left: 5%;
-}
-
-
-
-
-.hobbiesTitle {
-    color: white;
-    font-size: 60px;
-    font-weight: 700;
-    text-align: left;
-    margin-left: 10%;
-    margin-right: 10%;
-    position: relative;
-    z-index: 3;
-}
-
-.hobbies {
-    margin-left: 10%;
-    margin-right: 10%;
-    padding-left: 2%;
-    padding-right: 10%;
-    color: white;
-    background-color: black;
-    position: relative;
-    z-index: 3;
 }
