added scrolling transitions

--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -1,5 +1,20 @@
+/* scrolling animation*/
+.section {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  position: relative;
+  z-index: 3;
+}
+
+.section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 
 /* General layout */
+
 
 #background-image {
   position: fixed;
