adjusted background particles

--- a/ihgPortfolio/src/app/home/home.component.html
+++ b/ihgPortfolio/src/app/home/home.component.html
@@ -21,6 +21,8 @@
           </div>
         </section>
 
+        <div class="black-background"></div>
+
         <section class="welcomeSection">
           <h1>Hello World!</h1>
           <div class="commandBox">
