--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -29,7 +29,7 @@
 }
 
 #particles-js {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
@@ -119,9 +119,7 @@
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 20vh;
-  padding-bottom: 10%;
   color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
   height: 100vh;
   position: relative;
   z-index: 3; /* Set z-index to ensure it's above the particles */
@@ -135,6 +133,14 @@
   text-align: left;
 }
 
+.black-background {
+  background-color: rgb(0, 0, 0);
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  z-index: 0;
+}
+
 .commandBox {
   
   padding: 1%;
@@ -144,7 +150,9 @@
   text-align: left;
   font-family: monospace;
   color: #eaeaea;
-  background-color: rgb(0, 0, 0, .8);
+  background-color: rgb(0, 0, 0);
+  position: relative;
+  z-index: 3;
   border:solid #dddddd 2px;
   border-radius: 10px;
   font-size: 20px;
