adjusted padding for input text

--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -34,7 +34,7 @@
                 fulfilling my passion for Computer Science <br>
               </p>
               <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
-                <span id="userInputContainer"><span style="color:#32cbf1"> $ </span><input type="text" id="userInput" name="section" placeholder="Type your command here..." ngModel required></span>
+                <span id="userInputContainer"><span style="color:#32cbf1"> $ </span><input type="text" id="userInput" name="section" placeholder="Type a command here..." ngModel required></span>
               </form> 
             </div>
             <img src="/assets/fullwidthAboutMePhoto.jpg" alt="Photo of author">
