--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -23,18 +23,22 @@ body {
     font-weight: 400;
 }
 
-
+/* 
 #userInputContainer::after {
     content: "";
     width: 10px;
     height: 25px;
+    margin-left: 10px;
+    margin-bottom: 5px;
     background: #d3d3d3;
-    display: inline-block;
+    display:flex;
     animation: cursor-blink 1.5s steps(2) infinite;
+    position: relative;
+    z-index: 4;
   }
   #userInputContainer:focus-within::after {
     display: none;
-  }
+  } */
 
   @keyframes cursor-blink {
     0% {
