--- a/ihgPortfolio/src/app/home/home.component.html
+++ b/ihgPortfolio/src/app/home/home.component.html
@@ -21,8 +21,8 @@
           </div>
         </section>
 
-        <div class="black-background"></div>
-        <section class="welcomeSection">
+        <div class="black-background" #blackBackground></div>
+        <section class="welcomeSection" #welcomeSection>
           
           <h1>Hello World!</h1>
           <div class="commandBox">
