fixed font size/weight everywhere

--- a/ihgPortfolio/src/app/about/about.component.css
+++ b/ihgPortfolio/src/app/about/about.component.css
@@ -141,3 +141,16 @@ body {
         
     }
 }
+
+@media (max-width: 500px) {
+    .aboutContent p {
+        font-size: 18px;
+        font-weight: 300;
+    }
+
+    .educationContent p {
+        font-size: 18px;
+        font-weight: 300;
+    }
+
+}
