added portfolio to projects + new logos for skills

--- a/ihgPortfolio/src/app/about/about.component.html
+++ b/ihgPortfolio/src/app/about/about.component.html
@@ -31,7 +31,7 @@
                 photographer, baker, basketball player, coffee lover]</span><br><br>
                 <span style="color:#32cbf1"> $ </span> My bucket list includes <span style="color:#32cbf1">[travel, skydiving, hiking, living by the water]</span> and more <br><br>
                 <span style="color:#32cbf1"> $ </span> I hope to continue finding new hobbies and checking off my bucket list all while
-                fulfilling my passion for Computer Science <br>
+                fulfilling my passion for Computer Science! <br>
               </p>
               <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
                 <span id="userInputContainer"><span style="color:#32cbf1"> $ </span><input type="text" id="userInput" name="section" placeholder="Type a command here..." ngModel required></span>
