adjust skills img widths- all are 900x900px so max-width=50px

--- a/ihgPortfolio/src/app/home/home.component.css
+++ b/ihgPortfolio/src/app/home/home.component.css
@@ -374,8 +374,8 @@
   }
 
   .skillImg img {
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
+    max-height: 50px;
     flex: 0 1 calc(33.333% - 32px);
     box-sizing: border-box;
   }
